{
    "name": "IA_PlayerControl",
    "maps": [
        {
            "name": "PlayerControl",
            "id": "14bf6835-a5c1-455c-98db-fe199a522794",
            "actions": [
                {
                    "name": "GetDamage",
                    "type": "Button",
                    "id": "024f0b37-5df3-43ec-a0b1-369c4a6892a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomIn",
                    "type": "Button",
                    "id": "68c79862-9fa8-498f-9560-5ffbb0573c24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomOut",
                    "type": "Button",
                    "id": "a62c2830-bf14-47af-9815-cbff4e55570a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2fb92556-a0b7-47b7-848d-469b9187dee3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetDamage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a63254a-47da-4e6f-9360-fa90b0037866",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5709dbec-1eb7-464b-b4c3-a3b64e5644f6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}